--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,11 +4,14 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/app_icone"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/app_icone"
         android:supportsRtl="true"
         android:theme="@style/Theme.BureauDeChange">
+        <activity
+            android:name=".lebureau"
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
